2005-06-07  Manish Singh  <yosh@gimp.org>

	* app/actions/dockable-actions.c (dockable_actions_update): cast
	the result of gtk_bin_get_child ().

2005-06-06  Michael Natterer  <mitch@gimp.org>

	* app/actions/dockable-actions.c (dockable_toggle_actions): use
	'B' instead of 'S' as mnemonic for "Show Button Bar".

2005-06-06  Maurits Rijk  <m.rijk@chello.nl>

	* plug-ins/imagemap/imap_grid.[ch]
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_menu.[ch]
	* plug-ins/imagemap/imap_menu_funcs.[ch]
	* plug-ins/imagemap/imap_object_popup.[ch]
	* plug-ins/imagemap/imap_polygon.[ch]: more conversion to action based
	menus. Almost done.

2005-06-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig.c (gfig_load_from_parasite): only create the
	temporary file if there is a parasite to load.

2005-06-06  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcellrendererdashes.c: removed unused variable.

2005-06-06  Tor Lillqvist  <tml@novell.com>

	* libgimp/gimpui.def: Add gimp_font_select_button_*.

2005-06-05  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/gimpenums.py
	* plug-ins/pygimp/gimpenumsmodule.c: use old pygtk enum API so we
	still work with older pygtk versions.

2005-06-05  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: make " no decorations" option
	work; problem pointed out by Jean-Luc Coulon on dev list.

2005-06-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrendererbrush.c
	(gimp_view_renderer_brush_render_timeout): if the area is larger
	than the brush, center the brush.

2005-06-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpeditor.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimppaletteeditor.c: peek at the default interface to
	get the parent interface. Unconditionally chain up in get_aux_info()
	and set_aux_info() methods.
