@@ -74,6 +74,11 @@ enum
   ARCH_X86_CYRIX_FEATURE_MMXEXT   = 1 << 24
 };
 
+enum
+{
+  ARCH_X86_INTEL_FEATURE_PNI      = 1 << 0
+};
+
 #if !defined(ARCH_X86_64) && defined(PIC)
 #define cpuid(op,eax,ebx,ecx,edx)  \
   __asm__ ("movl %%ebx, %%esi\n\t" \
@@ -187,6 +192,9 @@ arch_accel_intel (void)
 
     if (edx & ARCH_X86_INTEL_FEATURE_XMM2)
       caps |= CPU_ACCEL_X86_SSE2;
+
+    if (ecx & ARCH_X86_INTEL_FEATURE_PNI)
+      caps |= CPU_ACCEL_X86_SSE3;
 #endif /* USE_SSE */
   }
 #endif /* USE_MMX */
@@ -466,6 +474,8 @@ cpu_accel_print_results (void)
               (cpu_accel() & CPU_ACCEL_X86_SSE)     ? "yes" : "no");
   g_printerr ("  sse2    : %s\n",
               (cpu_accel() & CPU_ACCEL_X86_SSE2)    ? "yes" : "no");
+  g_printerr ("  sse3    : %s\n",
+              (cpu_accel() & CPU_ACCEL_X86_SSE3)    ? "yes" : "no");
 #endif
 #ifdef ARCH_PPC
   g_printerr ("  altivec : %s\n",
