@@ -1,5 +1,9 @@
 2005-06-07  Manish Singh  <yosh@gimp.org>
 
+	* app/base/cpu-accel.[ch]: detect SSE3.
+
+2005-06-07  Manish Singh  <yosh@gimp.org>
+
 	* app/actions/dockable-actions.c (dockable_actions_update): cast
 	the result of gtk_bin_get_child ().
 
